src/theme/parser-grammar.c
/* A recursive-descent parser generated by peg 0.1.15 */

#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#define YYRULECOUNT 42


#include <glib.h>
#include "parser.h"

#define YY_INPUT(buf, result, max_size)                          \
{                                                                \
    int yyc = (charbuf && *charbuf != '\0') ? *charbuf++ : EOF;  \
    result = (EOF == yyc) ? 0 : (*buf = yyc, 1);                 \
}

static GList *nodes = NULL;
static gint if_count = 0;
static gchar *fn_name = NULL;
static GSList *fn_args = NULL;
static balde_template_fn_arg_type_t fn_arg_type;
static const gchar *charbuf = NULL;
static gboolean clean_whitespace_next = FALSE;

static void
balde_template_clean_whitespace_prev(void)
{
    GList *last = g_list_last(nodes);
    for (GList *tmp = last; tmp != NULL; tmp = g_list_previous(tmp)) {
        balde_template_block_t *block = tmp->data;
        if (block->type == BALDE_TEMPLATE_CONTENT_BLOCK) {
            balde_template_content_block_t *content = block->block;
            g_strchomp(content->content);
            break;
        }
    }
}

static void
balde_template_clean_whitespace_next(void)
{
    clean_whitespace_next = TRUE;
}

static void
balde_template_import_block(const gchar *import)
{
    balde_template_import_block_t *block = g_new(balde_template_import_block_t, 1);
    block->import = g_strdup(import);
    balde_unescape_single_quoted_strings(&(block->import));
    balde_template_block_t *node = g_new(balde_template_block_t, 1);
    node->block = block;
    node->type = BALDE_TEMPLATE_IMPORT_BLOCK;
    nodes = g_list_append(nodes, node);
}

static void
balde_template_include_block(const gchar *include)
{
    balde_template_include_block_t *block = g_new(balde_template_include_block_t, 1);
    block->include = g_strdup(include);
    balde_unescape_single_quoted_strings(&(block->include));
    balde_template_block_t *node = g_new(balde_template_block_t, 1);
    node->block = block;
    node->type = BALDE_TEMPLATE_INCLUDE_BLOCK;
    nodes = g_list_append(nodes, node);
}

static void
balde_template_if_block(const gchar *if_var)
{
    balde_template_if_block_t *block = g_new(balde_template_if_block_t, 1);
    block->if_var = g_strdup(if_var);
    balde_template_block_t *node = g_new(balde_template_block_t, 1);
    node->block = block;
    node->type = BALDE_TEMPLATE_IF_BLOCK;
    nodes = g_list_append(nodes, node);
    if_count++;
}

static void
balde_template_else_block(void)
{
    if (if_count <= 0)
        g_error("Syntax error: {" "%% else %%" "} block without any open {" "%% if ... %%" "} block");
    balde_template_block_t *node = g_new(balde_template_block_t, 1);
    node->block = NULL;
    node->type = BALDE_TEMPLATE_ELSE_BLOCK;
    nodes = g_list_append(nodes, node);
}

static void
balde_template_endif_block(void)
{
    if (if_count-- <= 0)
        g_error("Syntax error: {" "%% endif %%" "} block before any {" "%% if ... %%" "} block");
    balde_template_block_t *node = g_new(balde_template_block_t, 1);
    node->block = NULL;
    node->type = BALDE_TEMPLATE_IF_END_BLOCK;
    nodes = g_list_append(nodes, node);
}

static void
balde_template_content_block(const gchar *content)
{
    balde_template_content_block_t *block = g_new(balde_template_content_block_t, 1);
    block->content = g_strdup(content);
    if (clean_whitespace_next) {
        g_strchug(block->content);
        clean_whitespace_next = FALSE;
    }
    balde_template_block_t *node = g_new(balde_template_block_t, 1);
    node->block = block;
    node->type = BALDE_TEMPLATE_CONTENT_BLOCK;
    nodes = g_list_append(nodes, node);
}

static void
balde_template_print_var_block(const gchar *var)
{
    balde_template_print_var_block_t *block = g_new(balde_template_print_var_block_t, 1);
    block->variable = g_strdup(var);
    balde_template_block_t *node = g_new(balde_template_block_t, 1);
    node->block = block;
    node->type = BALDE_TEMPLATE_PRINT_VAR_BLOCK;
    nodes = g_list_append(nodes, node);
}

static void
balde_template_print_fn_arg(const gchar *arg)
{
    balde_template_fn_arg_t *a = g_new(balde_template_fn_arg_t, 1);
    switch (fn_arg_type) {
        case BALDE_TEMPLATE_FN_ARG_STRING:
            a->content = g_strdup_printf("\"%s\"", arg);
            balde_unescape_single_quoted_strings(&(a->content));
            break;
        default:
            a->content = g_strdup(arg);
    }
    a->type = fn_arg_type;
    fn_args = g_slist_append(fn_args, a);
}

static void
balde_template_print_fn_id(const gchar *fn_id)
{
    fn_name = g_strdup(fn_id);
}

static void
balde_template_print_block(void)
{
    balde_template_print_fn_call_block_t *block = g_new(balde_template_print_fn_call_block_t, 1);
    block->name = fn_name;
    block->args = fn_args;
    balde_template_block_t *node = g_new(balde_template_block_t, 1);
    node->block = block;
    node->type = BALDE_TEMPLATE_PRINT_FN_CALL_BLOCK;
    nodes = g_list_append(nodes, node);
    fn_name = NULL;
    fn_args = NULL;
}


#ifndef YY_MALLOC
#define YY_MALLOC(C, N)		malloc(N)
#endif
#ifndef YY_REALLOC
#define YY_REALLOC(C, P, N)	realloc(P, N)
#endif
#ifndef YY_FREE
#define YY_FREE(C, P)		free(P)
#endif
#ifndef YY_LOCAL
#define YY_LOCAL(T)	static T
#endif
#ifndef YY_ACTION
#define YY_ACTION(T)	static T
#endif
#ifndef YY_RULE
#define YY_RULE(T)	static T
#endif
#ifndef YY_PARSE
#define YY_PARSE(T)	T
#endif
#ifndef YYPARSE
#define YYPARSE		yyparse
#endif
#ifndef YYPARSEFROM
#define YYPARSEFROM	yyparsefrom
#endif
#ifndef YYRELEASE
#define YYRELEASE	yyrelease
#endif
#ifndef YY_BEGIN
#define YY_BEGIN	( yy->__begin= yy->__pos, 1)
#endif
#ifndef YY_END
#define YY_END		( yy->__end= yy->__pos, 1)
#endif
#ifdef YY_DEBUG
# define yyprintf(args)	fprintf args
#else
# define yyprintf(args)
#endif
#ifndef YYSTYPE
#define YYSTYPE	int
#endif
#ifndef YY_STACK_SIZE
#define YY_STACK_SIZE 128
#endif

#ifndef YY_BUFFER_SIZE
#define YY_BUFFER_SIZE 1024
#endif

#ifndef YY_PART

typedef struct _yycontext yycontext;
typedef void (*yyaction)(yycontext *yy, char *yytext, int yyleng);
typedef struct _yythunk { int begin, end;  yyaction  action;  struct _yythunk *next; } yythunk;

struct _yycontext {
  char     *__buf;
  int       __buflen;
  int       __pos;
  int       __limit;
  char     *__text;
  int       __textlen;
  int       __begin;
  int       __end;
  int       __textmax;
  yythunk  *__thunks;
  int       __thunkslen;
  int       __thunkpos;
  YYSTYPE   __;
  YYSTYPE  *__val;
  YYSTYPE  *__vals;
  int       __valslen;
#ifdef YY_CTX_MEMBERS
  YY_CTX_MEMBERS
#endif
};

#ifdef YY_CTX_LOCAL
#define YY_CTX_PARAM_	yycontext *yyctx,
#define YY_CTX_PARAM	yycontext *yyctx
#define YY_CTX_ARG_	yyctx,
#define YY_CTX_ARG	yyctx
#ifndef YY_INPUT
#define YY_INPUT(yy, buf, result, max_size)		\
  {							\
    int yyc= getchar();					\
    result= (EOF == yyc) ? 0 : (*(buf)= yyc, 1);	\
    yyprintf((stderr, "<%c>", yyc));			\
  }
#endif
#else
#define YY_CTX_PARAM_
#define YY_CTX_PARAM
#define YY_CTX_ARG_
#define YY_CTX_ARG
yycontext _yyctx= { 0, 0 };
yycontext *yyctx= &_yyctx;
#ifndef YY_INPUT
#define YY_INPUT(buf, result, max_size)			\
  {							\
    int yyc= getchar();					\
    result= (EOF == yyc) ? 0 : (*(buf)= yyc, 1);	\
    yyprintf((stderr, "<%c>", yyc));			\
  }
#endif
#endif

YY_LOCAL(int) yyrefill(yycontext *yy)
{
  int yyn;
  while (yy->__buflen - yy->__pos < 512)
    {
      yy->__buflen *= 2;
      yy->__buf= (char *)YY_REALLOC(yy, yy->__buf, yy->__buflen);
    }
#ifdef YY_CTX_LOCAL
  YY_INPUT(yy, (yy->__buf + yy->__pos), yyn, (yy->__buflen - yy->__pos));
#else
  YY_INPUT((yy->__buf + yy->__pos), yyn, (yy->__buflen - yy->__pos));
#endif
  if (!yyn) return 0;
  yy->__limit += yyn;
  return 1;
}

YY_LOCAL(int) yymatchDot(yycontext *yy)
{
  if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
  ++yy->__pos;
  return 1;
}

YY_LOCAL(int) yymatchChar(yycontext *yy, int c)
{
  if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
  if ((unsigned char)yy->__buf[yy->__pos] == c)
    {
      ++yy->__pos;
      yyprintf((stderr, "  ok   yymatchChar(yy, %c) @ %s\n", c, yy->__buf+yy->__pos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchChar(yy, %c) @ %s\n", c, yy->__buf+yy->__pos));
  return 0;
}

YY_LOCAL(int) yymatchString(yycontext *yy, const char *s)
{
  int yysav= yy->__pos;
  while (*s)
    {
      if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
      if (yy->__buf[yy->__pos] != *s)
        {
          yy->__pos= yysav;
          return 0;
        }
      ++s;
      ++yy->__pos;
    }
  return 1;
}

YY_LOCAL(int) yymatchClass(yycontext *yy, unsigned char *bits)
{
  int c;
  if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
  c= (unsigned char)yy->__buf[yy->__pos];
  if (bits[c >> 3] & (1 << (c & 7)))
    {
      ++yy->__pos;
      yyprintf((stderr, "  ok   yymatchClass @ %s\n", yy->__buf+yy->__pos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchClass @ %s\n", yy->__buf+yy->__pos));
  return 0;
}

YY_LOCAL(void) yyDo(yycontext *yy, yyaction action, int begin, int end)
{
  while (yy->__thunkpos >= yy->__thunkslen)
    {
      yy->__thunkslen *= 2;
      yy->__thunks= (yythunk *)YY_REALLOC(yy, yy->__thunks, sizeof(yythunk) * yy->__thunkslen);
    }
  yy->__thunks[yy->__thunkpos].begin=  begin;
  yy->__thunks[yy->__thunkpos].end=    end;
  yy->__thunks[yy->__thunkpos].action= action;
  ++yy->__thunkpos;
}

YY_LOCAL(int) yyText(yycontext *yy, int begin, int end)
{
  int yyleng= end - begin;
  if (yyleng <= 0)
    yyleng= 0;
  else
    {
      while (yy->__textlen < (yyleng + 1))
	{
	  yy->__textlen *= 2;
	  yy->__text= (char *)YY_REALLOC(yy, yy->__text, yy->__textlen);
	}
      memcpy(yy->__text, yy->__buf + begin, yyleng);
    }
  yy->__text[yyleng]= '\0';
  return yyleng;
}

YY_LOCAL(void) yyDone(yycontext *yy)
{
  int pos;
  for (pos= 0;  pos < yy->__thunkpos;  ++pos)
    {
      yythunk *thunk= &yy->__thunks[pos];
      int yyleng= thunk->end ? yyText(yy, thunk->begin, thunk->end) : thunk->begin;
      yyprintf((stderr, "DO [%d] %p %s\n", pos, thunk->action, yy->__text));
      thunk->action(yy, yy->__text, yyleng);
    }
  yy->__thunkpos= 0;
}

YY_LOCAL(void) yyCommit(yycontext *yy)
{
  if ((yy->__limit -= yy->__pos))
    {
      memmove(yy->__buf, yy->__buf + yy->__pos, yy->__limit);
    }
  yy->__begin -= yy->__pos;
  yy->__end -= yy->__pos;
  yy->__pos= yy->__thunkpos= 0;
}

YY_LOCAL(int) yyAccept(yycontext *yy, int tp0)
{
  if (tp0)
    {
      fprintf(stderr, "accept denied at %d\n", tp0);
      return 0;
    }
  else
    {
      yyDone(yy);
      yyCommit(yy);
    }
  return 1;
}

YY_LOCAL(void) yyPush(yycontext *yy, char *text, int count)
{
  yy->__val += count;
  while (yy->__valslen <= yy->__val - yy->__vals)
    {
      long offset= yy->__val - yy->__vals;
      yy->__valslen *= 2;
      yy->__vals= (YYSTYPE *)YY_REALLOC(yy, yy->__vals, sizeof(YYSTYPE) * yy->__valslen);
      yy->__val= yy->__vals + offset;
    }
}
YY_LOCAL(void) yyPop(yycontext *yy, char *text, int count)   { yy->__val -= count; }
YY_LOCAL(void) yySet(yycontext *yy, char *text, int count)   { yy->__val[count]= yy->__; }

#endif /* YY_PART */

#define	YYACCEPT	yyAccept(yy, yythunkpos0)

YY_RULE(int) yy_print_fn(yycontext *yy); /* 42 */
YY_RULE(int) yy_print_fn_id(yycontext *yy); /* 41 */
YY_RULE(int) yy_print_fn_args(yycontext *yy); /* 40 */
YY_RULE(int) yy_print_fn_arg(yycontext *yy); /* 39 */
YY_RULE(int) yy_print_fn_arg_null(yycontext *yy); /* 38 */
YY_RULE(int) yy_print_fn_arg_bool(yycontext *yy); /* 37 */
YY_RULE(int) yy_print_fn_arg_float(yycontext *yy); /* 36 */
YY_RULE(int) yy_print_fn_arg_int(yycontext *yy); /* 35 */
YY_RULE(int) yy_print_fn_arg_str(yycontext *yy); /* 34 */
YY_RULE(int) yy_print_fn_arg_var(yycontext *yy); /* 33 */
YY_RULE(int) yy_print_var(yycontext *yy); /* 32 */
YY_RULE(int) yy_print_close(yycontext *yy); /* 31 */
YY_RULE(int) yy_print_open(yycontext *yy); /* 30 */
YY_RULE(int) yy_if_close(yycontext *yy); /* 29 */
YY_RULE(int) yy_if_open(yycontext *yy); /* 28 */
YY_RULE(int) yy_include_close(yycontext *yy); /* 27 */
YY_RULE(int) yy_include_open(yycontext *yy); /* 26 */
YY_RULE(int) yy_import_close(yycontext *yy); /* 25 */
YY_RULE(int) yy_import_open(yycontext *yy); /* 24 */
YY_RULE(int) yy_clean_whitespace_close(yycontext *yy); /* 23 */
YY_RULE(int) yy_clean_whitespace_open(yycontext *yy); /* 22 */
YY_RULE(int) yy_null(yycontext *yy); /* 21 */
YY_RULE(int) yy_bool(yycontext *yy); /* 20 */
YY_RULE(int) yy_float(yycontext *yy); /* 19 */
YY_RULE(int) yy_sign(yycontext *yy); /* 18 */
YY_RULE(int) yy_int(yycontext *yy); /* 17 */
YY_RULE(int) yy_str(yycontext *yy); /* 16 */
YY_RULE(int) yy_unq_str2(yycontext *yy); /* 15 */
YY_RULE(int) yy_unq_str1(yycontext *yy); /* 14 */
YY_RULE(int) yy_id(yycontext *yy); /* 13 */
YY_RULE(int) yy__(yycontext *yy); /* 12 */
YY_RULE(int) yy_eof(yycontext *yy); /* 11 */
YY_RULE(int) yy_eol(yycontext *yy); /* 10 */
YY_RULE(int) yy_anything(yycontext *yy); /* 9 */
YY_RULE(int) yy_content(yycontext *yy); /* 8 */
YY_RULE(int) yy_print_call(yycontext *yy); /* 7 */
YY_RULE(int) yy_if_end(yycontext *yy); /* 6 */
YY_RULE(int) yy_else(yycontext *yy); /* 5 */
YY_RULE(int) yy_if(yycontext *yy); /* 4 */
YY_RULE(int) yy_include(yycontext *yy); /* 3 */
YY_RULE(int) yy_import(yycontext *yy); /* 2 */
YY_RULE(int) yy_page(yycontext *yy); /* 1 */

YY_ACTION(void) yy_1_content(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_content\n"));
  {
   balde_template_content_block(yytext); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_print_fn(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_print_fn\n"));
  {
   balde_template_print_block(); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_print_fn_id(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_print_fn_id\n"));
  {
   balde_template_print_fn_id(yytext); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_print_fn_arg(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_print_fn_arg\n"));
  {
   balde_template_print_fn_arg(yytext); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_print_fn_arg_null(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_print_fn_arg_null\n"));
  {
   fn_arg_type = BALDE_TEMPLATE_FN_ARG_NULL; ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_print_fn_arg_bool(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_print_fn_arg_bool\n"));
  {
   fn_arg_type = BALDE_TEMPLATE_FN_ARG_BOOL; ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_print_fn_arg_float(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_print_fn_arg_float\n"));
  {
   fn_arg_type = BALDE_TEMPLATE_FN_ARG_FLOAT; ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_print_fn_arg_int(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_print_fn_arg_int\n"));
  {
   fn_arg_type = BALDE_TEMPLATE_FN_ARG_INT; ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_print_fn_arg_str(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_print_fn_arg_str\n"));
  {
   fn_arg_type = BALDE_TEMPLATE_FN_ARG_STRING; ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_print_fn_arg_var(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_print_fn_arg_var\n"));
  {
   fn_arg_type = BALDE_TEMPLATE_FN_ARG_VAR; ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_print_var(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_print_var\n"));
  {
   balde_template_print_var_block(yytext); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_if_end(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_if_end\n"));
  {
   balde_template_endif_block(); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_else(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_else\n"));
  {
   balde_template_else_block(); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_if(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_if\n"));
  {
   balde_template_if_block(yytext); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_include(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_include\n"));
  {
   balde_template_include_block(yytext); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_import(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_import\n"));
  {
   balde_template_import_block(yytext); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_clean_whitespace_close(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_clean_whitespace_close\n"));
  {
   balde_template_clean_whitespace_next(); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_clean_whitespace_open(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_clean_whitespace_open\n"));
  {
   balde_template_clean_whitespace_prev(); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_page(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_page\n"));
  {
   g_error("Syntax error near: %s", yytext); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
